--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" href="data:,"> <!-- khi play bài hát chrome bắt tải icon trang web nên khai báo giả ở đây -->
+    <link rel="icon" href="data:,">
+    <!-- khi play bài hát chrome bắt tải icon trang web nên khai báo giả ở đây -->
     <link rel="stylesheet" href="./asset/font/fontawesome-free-5.15.3-web/css/all.min.css" />
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="player">
         <div class="dashbroad">
             <div class="dashbroad_info">
                 <label for="" class="dashbroad_info_label">Now playing</label>
-                <h3 class="dashbroad_info_name" >Thê Lương123</h3>
+                <h3 class="dashbroad_info_name">Thê Lương123</h3>
                 <div class="dashbroad_info_cd">
                     <div class="dashbroad_info_cd_image" style="background-image: url('./asset/img/img2.jpg')"></div>
                 </div>
@@ -38,14 +41,14 @@
                     <i class="fas fa-random"></i>
                 </button>
             </div>
-            <input id="progress" class="progress" type="range" value="20" step="1" min="0" max="100">
+            <input id="progress" class="progress" type="range" value="0" step="1" min="0" max="100">
             <audio id="audio" src=""></audio>
         </div>
 
         <div class="playlist">
-            <div class="song">
+            <div class="song active">
                 <div class="song_thumbnail">
-                    <div class="song_thumbnail_img" style="background-image: url(./asset/img/img2.jpg);" ></div>
+                    <div class="song_thumbnail_img" style="background-image: url(./asset/img/img2.jpg);"></div>
                 </div>
                 <div class="song_content">
                     <div class="song_content_name">
@@ -57,9 +60,10 @@
                     <i class="fas fa-ellipsis-h"></i>
                 </div>
             </div>
-           
+
         </div>
     </div>
     <script src="./java.js"></script>
 </body>
+
 </html>
