--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </button>
             </div>
             <input id="progress" class="progress" type="range" value="0" step="1" min="0" max="100">
-            <audio id="audio" src=""></audio>
+            <audio id="audio" src=""  preload="none"></audio>
         </div>
 
         <div class="playlist">
