--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="player">
         <div class="dashbroad">
             <div class="dashbroad_info">
-                <label for="" class="dashbroad_info_label">Now playing</label>
+                <label for="" class="dashbroad_info_label">playing</label>
                 <h3 class="dashbroad_info_name">Thê Lương123</h3>
                 <div class="dashbroad_info_cd">
                     <div class="dashbroad_info_cd_image" style="background-image: url('./asset/img/img2.jpg')"></div>
