--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- khi play bài hát chrome bắt tải icon trang web nên khai báo giả ở đây -->
     <link rel="stylesheet" href="./asset/font/fontawesome-free-5.15.3-web/css/all.min.css" />
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./reponsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
@@ -48,7 +49,7 @@
             <input id="progress" class="progress" type="range" value="0" step="1" min="0" max="100">
             <audio id="audio" src=""  preload="none"></audio>
         </div>
-
+        
         <div class="playlist">
             <div class="song active">
                 <div class="song_thumbnail">
@@ -64,10 +65,48 @@
                     <i class="fas fa-ellipsis-h"></i>
                 </div>
             </div>
-
         </div>
     </div>
     <script src="./java.js"></script>
+    <script type="text/javascript" src="./vanilla-tilt.js"></script>
+    <script>
+        VanillaTilt.init(document.querySelectorAll(".btn"), {
+            reverse:                false,  // reverse the tilt direction
+            max:                    35,     // max tilt rotation (degrees)
+            startX:                 0,      // the starting tilt on the X axis, in degrees.
+            startY:                 0,      // the starting tilt on the Y axis, in degrees.
+            perspective:            1000,   // Transform perspective, the lower the more extreme the tilt gets.
+            scale:                  1,      // 2 = 200%, 1.5 = 150%, etc..
+            speed:                  300,    // Speed of the enter/exit transition
+            transition:             true,   // Set a transition on enter/exit.
+            axis:                   null,   // What axis should be disabled. Can be X or Y.
+            reset:                  true,    // If the tilt effect has to be reset on exit.
+            easing:                 "cubic-bezier(.03,.98,.52,.99)",    // Easing on enter/exit.
+            glare:                  true,   // if it should have a "glare" effect
+            "max-glare":            1,      // the maximum "glare" opacity (1 = 100%, 0.5 = 50%)
+            "glare-prerender":      false,  // false = VanillaTilt creates the glare elements for you, otherwise
+                                            // you need to add .js-tilt-glare>.js-tilt-glare-inner by yourself
+            "mouse-event-element":  null, 
+	});
+        VanillaTilt.init(document.querySelector(".dashbroad_info_cd"), {
+            reverse:                false,  // reverse the tilt direction
+            max:                    35,     // max tilt rotation (degrees)
+            startX:                 0,      // the starting tilt on the X axis, in degrees.
+            startY:                 0,      // the starting tilt on the Y axis, in degrees.
+            perspective:            1000,   // Transform perspective, the lower the more extreme the tilt gets.
+            scale:                  1,      // 2 = 200%, 1.5 = 150%, etc..
+            speed:                  300,    // Speed of the enter/exit transition
+            transition:             true,   // Set a transition on enter/exit.
+            axis:                   null,   // What axis should be disabled. Can be X or Y.
+            reset:                  true,    // If the tilt effect has to be reset on exit.
+            easing:                 "cubic-bezier(.03,.98,.52,.99)",    // Easing on enter/exit.
+            glare:                  true,   // if it should have a "glare" effect
+            "max-glare":            1,      // the maximum "glare" opacity (1 = 100%, 0.5 = 50%)
+            "glare-prerender":      false,  // false = VanillaTilt creates the glare elements for you, otherwise
+                                            // you need to add .js-tilt-glare>.js-tilt-glare-inner by yourself
+            "mouse-event-element":  null, 
+	});
+    </script>
 </body>
 
 </html>
