--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div class="circle1"></div>
     <div class="player">
         <div class="dashbroad">
             <div class="dashbroad_info">
@@ -67,6 +68,7 @@
             </div>
         </div>
     </div>
+    <div class="circle2"></div>
     <script type="text/javascript" src="./vanilla-tilt.js"></script>
     <script src="./java.js"></script>
     
