--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="dashbroad_info">
                 <label for="" class="dashbroad_info_label">
                     <i class="fas fa-heart"></i>
-                    Hello, Phi Phi yêu dấu
+                        Now Playing
                     <i class="fas fa-heart"></i>
                 </label>
-                <h3 class="dashbroad_info_name">Thê Lương123</h3>
+                <h3 class="dashbroad_info_name">Bài hát</h3>
                 <div class="dashbroad_info_cd">
                     <div class="dashbroad_info_cd_image" style="background-image: url('./asset/img/img2.jpg')"></div>
                 </div>
